--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,14 @@ body {
 }
 
 button,
-label {
+label, input, textarea {
     background-color: black;
     border: 1px solid violet;
     color: violet;
     padding: .5rem 1rem;
     border-radius: .5rem;
     font-family: monospace;
+}
+label {
+    background-color: transparent;
 }
